# scim-test-server

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  seed_data.json
.github/workflows/: docker-publish.yml
lode/: lode-map.md
lode/scim/: enterprise-extension-diff.md  scim11-schemas.md
src/scim_server/: __init__.py  config.py  failsource_routes.py  failsource_storage.py  main.py  models.py  salesforce_routes.py  salesforce_storage.py  storage.py
tests/: conftest.py  test_config.py  test_failsource_auth.py  test_failsource_groups.py  test_failsource_users.py  test_groups.py  test_salesforce_auth.py  test_salesforce_groups.py  test_salesforce_users.py  test_users.py
