[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scim-test-server"
version = "0.1.0"
description = "SCIM 1.1 and 2.0 test server with configurable behavior"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
]

[project.scripts]
scim-server = "scim_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scim_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
